--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -27,7 +27,7 @@
             
             <tr>
                 <td class="label">Fonction:</td>
-                <td>{{chercheur.fonction|default:"-"}}</td>
+                <td>{{chercheur.fonction_display|default:"-"}}</td>
             </tr>
             <tr>
                 <td class="label">Diplôme:</td>
