--- a/auf_savoirs_en_partage/templates/accounts/email_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/email_password.html
@@ -8,8 +8,11 @@ Pour procéder à cette manoeuvre, veuillez vous rendre au lien suivant:
 
 Si vous n'êtes pas l'initiateur de cette demande, merci d'ignorer ce message.
 
-Bien cordialement,
+Si vous rencontrez des difficultés, vous pouvez écrire à : {{CONTACT_EMAIL}}
+
+Avec nos meilleures salutations.
 
 _____________________________
 Savoirs en partage
 {{SITE_ROOT_URL}}
+{{CONTACT_EMAIL}}
