Ajout des sites à la recherche transversale.

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -70,7 +70,7 @@
                     </h2>
 
                     <div class="boite-recherche">
-                        <h3>Recherche <span>dans les ressources scientifiques</span></h3>
+                        <h3>Recherche</h3>
 
                         <form name="fRecherche" id="fRecherche" action="{% url savoirs.views.recherche %}" method="get">
                             <input name="q" id="recherche" type="text" value="{{ q|default:"" }}" />
