--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -1,5 +1,26 @@
 {% extends "container_base.html" %}
+{% load pagination_tags %}
+{% load sorting_tags %}
 
 {% block contenu %}
-{% include "sites/rechercher.html" %}
+{% autopaginate sites 10 %}
+
+<h4>Sitothèque</h4>
+
+<div class="contenu-wrapper">
+
+  <form method="get" action="">
+    <table id="repertoire_recherche">
+      {{search_form.as_table}}
+      <tr><th></th><td><input type="submit" class="bouton" value="Rechercher" /></td></tr>
+    </table>
+  </form>
+
+  <p><strong>{{nb_sites}} site{{ nb_sites|pluralize }} correspondant à votre recherche :</strong></p>
+  <div class="centre">{% paginate %}</div>
+  {% for site in sites %}
+  {% include "sites/resultat.html" %}
+  {% endfor %}
+  <div class="centre">{% paginate %}</div>
+</div>
 {% endblock %}
