--- a/auf_savoirs_en_partage/templates/chercheurs/inscription.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/inscription.html
@@ -46,7 +46,7 @@
     </fieldset>
 
     <fieldset>
-        <legend>Thèse</legend>
+        <legend>Thèse ou mémoire</legend>
         <div>
             <div class="publication">
               {% with these_form as form %}
