--- a/auf_savoirs_en_partage/templates/500.html
+++ b/auf_savoirs_en_partage/templates/500.html
@@ -1,1 +1,8 @@
-erreur 500
+{% extends "container_base.html" %}
+
+{% block contenu %}
+<h4>Erreur sur le site</h4>
+<div class="zone-texte">
+    <p>Une erreur est survenue sur le site. Cette erreur a été reportée à l'équipe technique.</p>
+</div>
+{% endblock %}
