texte présentation répertoire + Chercheurs renommé en répertoire

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -48,7 +48,7 @@
                     <span>|</span>
                     <a href="{% url savoirs.views.ressource_index %}">Ressources</a>
                     <span>|</span>
-                    <a href="{% url chercheurs.views.index %}">Chercheurs</a>
+                    <a href="{% url chercheurs.views.index %}">Répertoire</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.index %}" class="bout-gauche">Accueil</a>
                 </div>
