--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <div id="chercheurs" class="box">
-        <h4><a href="{% url chercheurs.views.index %}">Chercheurs</a></h4>
+        <h4><a href="{% url chercheurs.views.index %}">Répertoire</a></h4>
         
         <ul class="sous-menu">
             <li><a href="{% url chercheurs.views.index %}">Répertoire</a></li>
