--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -1,5 +1,24 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
+
+<h4>Répertoire des chercheurs</h4>
+
+<ul class="actions">
+  {% include "chercheurs/actions.html" %}
+</ul>
+
+<div class="texte">
+    <p>
+    Bienvenue sur le répertoire des chercheurs francophones de l'Agence universitaire de la Francophonie (AUF).
+    </p>
+    <p>
+    Cet outil recense les universitaires (enseignants, chercheurs, doctorants) impliqués, ou souhaitant s'impliquer, dans les projets scientifiques appuyés par l'AUF. Il permet à la communauté scientifique de se mobiliser sur des projets en fonction de repères thématiques et/ou régionaux. 
+    </p>
+    <p>
+    Dans le cadre de la programmation quadriennale, la politique scientifique de l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus le critère d'organisation du répertoire (consulter la <a href="{{ MEDIA_URL }}docs/conversion.txt">table de passage</a>). Les chercheurs précisent leur discipline et choissent leurs centres d'intérêt dans des listes prédéfinies, et ajoutent des mots-clés pour affiner leur profil scientifique.
+    </p>
+</div>
+
 {% include "chercheurs/rechercher.html" %}
 {% endblock %}
