--- a/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
@@ -4,40 +4,33 @@
 {% autosort chercheurs %}
 {% autopaginate chercheurs 20 %}
 
-<h4>Répertoire des chercheurs</h4>
-<ul class="actions">
-  {% include "chercheurs/actions.html" %}
-</ul>
+<h5>Recherche</h5>
 
-<div class="contenu-wrapper">
-
-<form method="get" action="">
-  <table id="repertoire_recherche">
+<form method="get" action="" class="contenu-wrapper">
+    <table id="repertoire_recherche">
     {{repertoire_form.as_table}}
-    <tr>
-      <td colspan="2" class="Lib">
-        <input type="submit" class="bouton" value="Rechercher" />
-      </td>
-    </tr>
-  </table>
+    <tr><td colspan="2" class="Lib"><input type="submit" class="bouton" value="Rechercher" /></td></tr>
+    </table>
 </form>
 
+<h5>Résultats : {{nb_chercheurs}} chercheurs correspondant à votre recherche</h5>
 
-<p><strong>{{nb_chercheurs}} chercheurs correspondant à votre recherche :</strong></p>
 <div class="centre">{% paginate %}</div>
-<table id="repertoire">
-    <tr>
-        <th>{% anchor personne__nom Nom %}</th>
-        <th>{% anchor etablissement__nom Établissement %}</th>
-        <th>{% anchor etablissement__pays Localisation %}</th>
-    </tr>
-{% for chercheur in chercheurs %}
-    <tr class="{% cycle 'odd' 'notodd' %}">
-        <td><a href="{% url chercheurs.views.retrieve chercheur.id %}">{{ chercheur }}</a></td>
-        <td>{% firstof chercheur.etablissement chercheur.etablissement_autre_nom %}</td>
-        <td>{% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays %}</td>
-    </tr>
-{% endfor %}
-</table>
-<div class="centre">{% paginate %}</div>
+<div class="contenu-wrapper">
+    <table id="repertoire">
+        <tr>
+            <th>{% anchor personne__nom Nom %}</th>
+            <th>{% anchor etablissement__nom Établissement %}</th>
+            <th>{% anchor etablissement__pays Localisation %}</th>
+        </tr>
+    {% for chercheur in chercheurs %}
+        <tr class="{% cycle 'odd' 'notodd' %}">
+            <td><a href="{% url chercheurs.views.retrieve chercheur.id %}">{{ chercheur }}</a></td>
+            <td>{% firstof chercheur.etablissement chercheur.etablissement_autre_nom %}</td>
+            <td>{% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays %}</td>
+        </tr>
+    {% endfor %}
+    </table>
 </div>
+<div class="centre">{% paginate %}</div>
+
