--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -34,9 +34,11 @@
                     <a href="{% url chercheurs.views.chercheur_login %}" class="bout-droit">Connexion</a>
                     {% endif %}
                     <span>|</span>
-                    <a href="{% url savoirs.views.nous_contacter %}">Nous contacter</a>
+                    <a href="{% url savoirs.views.legal %}">Légal</a>
                     <span>|</span>
-                    <a href="{% url savoirs.views.a_propos %}" class="bout-gauche">À propos de</a>
+                    <a href="{% url savoirs.views.nous_contacter %}">Contact</a>
+                    <span>|</span>
+                    <a href="{% url savoirs.views.a_propos %}" class="bout-gauche">À propos</a>
                 </div>
                 
                 <div class="sous-menu gauche">
