texte de présentation agenda + conditions utilisation

--- a/auf_savoirs_en_partage/templates/savoirs/evenement_confirmation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_confirmation.html
@@ -14,8 +14,8 @@
 <div class="clearfix">
   <h4>Soumettre un événement</h4>
   <div class="zone-texte">
-    <p>Votre évenement a bien été pris en compte, il sera approuvé par notre 
-    équipe bientot.</p>
+    <p>Votre événement a bien été pris en compte, il sera approuvé par notre 
+    équipe bientôt.</p>
   </div>
 </div>
 
