--- a/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
@@ -4,23 +4,37 @@
 {% block contenu %}
 {% autopaginate evenements 10 %}
 <h4>Agenda</h4>
+
 <ul class="actions">
-  {% include "savoirs/evenement_actions.html" %}
-  <li><a href="/rss/agenda"><img src="/media/img/feed.png" /></a></li>
+    {% include "savoirs/evenement_actions.html" %}
+    <li><a href="/rss/agenda"><img src="/media/img/feed.png" /></a></li>
 </ul>
 
-<div class="contenu-wrapper">
-  <form action="" method="get">
+<div class="texte">
+    <p>
+    La possibilité est offerte aux chercheurs d'annoncer sur ce portail un événement scientifique en l'inscrivant dans un agenda consultable par tous. 
+    C'est aussi un outil de communication et de veille au service des universitaires et scientifiques francophones qui leur permet de se tenir informés des manifestations scientifiques et de répondre aux appels à communications et contributions ainsi qu'aux appels à projets. 
+    </p>
+    <p>
+    Consulter les <a href="{% url savoirs.views.evenement_utilisation %}">conditions d'utilisation</a>.
+    </p>
+</div>
+
+<h5>Recherche</h5>
+    <form action="" method="get" class="contenu-wrapper">
     <table>
-      {{ search_form.as_table }}
-      <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
+    {{ search_form.as_table }}
+    <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
     </table>
-  </form>
-  <p><strong>{{ nb_resultats }} événements correspondant à votre recherche :</strong></p>
-  <div class="centre">{% paginate %}</div>
-  {% for evenement in evenements %}
-  {% include "savoirs/evenement_resultat.html" %}
-  {% endfor %}
-  <div class="centre">{% paginate %}</div>
+    </form>
+
+<h5>Résultats : {{ nb_resultats }} événements correspondant à votre recherche</h5>
+
+<div class="contenu-wrapper">
+    <div class="centre">{% paginate %}</div>
+    {% for evenement in evenements %}
+    {% include "savoirs/evenement_resultat.html" %}
+    {% endfor %}
+    <div class="centre">{% paginate %}</div>
 </div>
 {% endblock %}
