--- a/auf_savoirs_en_partage/templates/savoirs/evenement.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement.html
@@ -31,7 +31,7 @@
     {% endif %}
     {% if evenement.lieu %}
     <tr>
-      <th>Emplacement</th>
+      <th>Lieu</th>
       <td>{{ evenement.lieu|linebreaksbr }}</td>
     </tr>
     {% endif %}
