--- a/auf_savoirs_en_partage/templates/savoirs/evenement.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement.html
@@ -7,11 +7,11 @@
   <table width="100%">
     <tr>
       <th width="120px">Début</th>
-      <td>{{ evenement.debut|date:"Y-m-d H:i" }} (UTC)</td>
+      <td>{{ evenement.debut|date:"d/m/Y H\hi" }} (UTC)</td>
     </tr>
     <tr>
       <th>Fin</th>
-      <td>{{ evenement.fin|date:"Y-m-d H:i" }} (UTC)</td>
+      <td>{{ evenement.fin|date:"d/m/Y H\hi" }} (UTC)</td>
     </tr>
     <tr>
       <th>Description</th>
