--- a/auf_savoirs_en_partage/templates/savoirs/evenement.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement.html
@@ -4,7 +4,17 @@
 <h4>{{ evenement.titre }}</h4>
 
 <div class="zone-texte">
-  <table width="100%">
+    <table width="100%">
+    <tr>
+        <th>Type</th>
+        <td>{{ evenement.type }}</td>
+    </tr>    
+    <tr>
+        <th>Discipline{% if evenement.discipline_secondaire %}s{% endif %}</th>
+        <td>{{ evenement.discipline }}
+            {% if evenement.discipline_secondaire %}, {{ evenement.discipline_secondaire }}{% endif %}
+        </td>
+    </tr>    
     <tr>
       <th width="120px">Début</th>
       <td>{{ evenement.debut|date:"d/m/Y H\hi" }} (UTC)</td>
