--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -277,3 +277,12 @@ font-weight:bold;
 font-size:12px;
 color:red;
 }
+
+
+.ressource-retrieve * {margin-top: 1em;}
+
+.le-titre{line-height: 24px;}
+
+.fiche, .original, .provenance {font-size: 80%; margin: 2px 0px;}
+.fiche {margin-top: 12px;}
+.fiche a, .original a, .provenance a{text-decoration: none;}
