--- a/auf_savoirs_en_partage/templates/savoirs/avancee.html
+++ b/auf_savoirs_en_partage/templates/savoirs/avancee.html
@@ -63,8 +63,10 @@
   <h4>Résultats de recherche:</h4>
 
   <div class="zone-texte">
-    {% for r in data.results %}
-      {% include "savoirs/resultat.html" %}
+      {% for r in data.results %}
+      {% with r as ressource %}
+        {% include "savoirs/ressource_resultat.html" %}
+      {% endwith %}
     {% empty %}
     <div class="resultatRecherche">
       <h2>Aucun résultat trouvé</h2>
