--- a/auf_savoirs_en_partage/templates/accounts/send_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/send_password.html
@@ -4,12 +4,12 @@
 <h4>Demande de changement de mot de passe</h4>
 <div class="contenu-wrapper">
     {% if form.is_valid %}
-        <span class="message">Un courriel a été envoyé à l'adresse spécifiée.</span>
+        <span class="message">Un message a été envoyé à l'adresse électronique spécifiée.</span>
     {% else %}
     <form method="post">
         <fieldset>
             {% include "table_form.html" %}
-            <span>Veuillez entrer le courriel avec lequel vous avez completé votre inscription.</span>
+            <span>Veuillez entrer l'adresse électronique avec laquelle vous avez completé votre inscription.</span>
         </fieldset>
         <input type="submit" name="Submit" value="Envoyer" class="bouton" />
     </form>
