--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -84,10 +84,12 @@
 
         <h5>Thèmes de recherche et publications</h5>
         <table id="publications">
+            {% if chercheur.theme_recherche %}
             <tr class="souligne">
                 <td class="label">Thèmes de recherche:</td>
                 <td>{{chercheur.theme_recherche}}</td>
             </tr>
+            {% endif %}
             {% if chercheur.these %}
             <tr class="souligne">
                 <td class="label">Thèse:</td>
