--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -85,11 +85,8 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #col-menu .actif a { color:#97012c; font-weight:bold; }
 
 #contenu { 
-    position: relative;
-    width:744px; 
-    margin:100px 0px 50px 0px; 
-    padding:0; 
-    float:left;
+    float:left; position: relative; width:744px; 
+    margin:100px 0px 50px 0px; padding:0; 
     background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; 
 }
 
@@ -114,7 +111,8 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu .texte ul li { list-style: disc; margin: 0 0 .25em; }
 #contenu .texte ol li { list-style: decimal; margin: 0 0 .25em; }
 #contenu .texte ul ul, #contenu .description ol ol  { margin-top: .25em; margin-bottom: .25em; }
-
+#contenu .texte a { text-decoration:none; font-size: 0.8em; }
+#contenu .texte a:hover { text-decoration:underline; }
 
 #contenu img.top, .resultats img.top { height:10px; position:relative; top:-10px; left:0;}
 #contenu img.bottom, .resultats img.bottom{ height:10px; position:relative; bottom:-10px; left:0;}
