--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -24,10 +24,10 @@
                 <td>{{chercheur.nationalite.nom|default:"-"}}</td>
             </tr>
             {% endif %}
-            <!--<tr>
-                <td class="label">Fonction:</td>
-                <td>{{chercheur.fonction_display|default:"-"}}</td>
-            </tr>-->
+            <tr>
+                <td class="label">Statut:</td>
+                <td>{{chercheur.statut_display|default:"-"}}</td>
+            </tr>
             <tr>
                 <td class="label">Diplôme:</td>
                 <td>{{chercheur.diplome|default:"-"}}</td>
