--- a/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
@@ -20,11 +20,14 @@
     </p>
     <p>
         <b>Critères de validation :</b><br />
+        Votre annonce sera publiée après un contrôle de la validité des informations données.
+        {% comment %}
         La validation de l'annonce est automatique, selon deux critères : 
         <ul>
         <li>L'inscription au répertoire tient lieu de validation : tous les évènements proposés par des chercheurs inscrits apparaissent aussitôt dans le répertoire.</li>
         <li>Seules les annonces complètes sont publiées : voir les champs indispensables sur la fiche évènement en ligne.</li>
         </ul>
+        {% endcomment %}
     </p>
     <p>
         <b>Type d'événement : </b><br />
