--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -93,6 +93,7 @@
         
         <ul class="sous-menu">
             <li><a href="{% url sitotheque.views.index %}">Sitothèque</a></li>
+            {% include "sites/actions.html" %}
         </ul>
         
         <ul class="liste-de-l-accueil">
