--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -5,7 +5,10 @@
 {% block contenu %}
 {% autopaginate sites 10 %}
 
-<h4>Sitothèque</h4>
+<h4>Sites &#8212; Sitothèque</h4>
+<ul class="actions">
+    {% include "sites/actions.html" %}
+</ul>
 
 <h5>Recherche</h5>
 
